# lium-io

./: .gitignore  pyproject.toml
datura/: pyproject.toml
neurons/miners/: .env.template  Dockerfile  README.md  pyproject.toml
neurons/miners/migrations/versions/: 20ad305cfb00_add_price_per_hour_into_executor_model.py
neurons/miners/src/: cli.py
neurons/miners/src/clients/: miner_portal_client.py
neurons/miners/src/consumers/: validator_consumer.py
neurons/miners/src/core/: config.py  miner.py  utils.py
neurons/miners/src/daos/: executor.py
neurons/miners/src/models/: executor.py
neurons/miners/src/protocol/: miner_portal_request.py
neurons/miners/src/services/: cli_service.py  executor_service.py
neurons/miners/tests/: test_miner_dual_signature.py
neurons/validators/: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.app.dstacktee.yml  pyproject.toml  version.txt
neurons/validators/migrations/: env.py
neurons/validators/migrations/versions/: 20250926_ba52e4725227_add_port_mapping.py  20251022_add_attestation_fields.py
neurons/validators/src/: cli.py  validator.py
neurons/validators/src/clients/: compute_client.py  miner_client.py  subtensor_client.py
neurons/validators/src/core/: config.py  db.py  utils.py  validator.py
neurons/validators/src/daos/: base.py  executor.py  port_mapping_dao.py
neurons/validators/src/miner_jobs/: backup_storage.py  machine_scrape.py  obfuscator.py  restore_storage.py
neurons/validators/src/models/: attestation_whitelist.py  executor.py  port_mapping.py
neurons/validators/src/payload_models/: payloads.py
neurons/validators/src/services/: attestation_service.py  collateral_contract_service.py  const.py  docker_service.py  executor_connectivity_service.py  interactive_shell_service.py  ioc.py  miner_service.py  redis_service.py  task_service.py  verifyx_validation_service.py
neurons/validators/tests/: conftest.py  test_batch_port_verifier.py  test_docker_service.py  test_executor_connectivity_service.py  test_port_mapping_dao.py
(+77 files in other folders)
