[project]
name = "miners"
version = "3.0.0"
description = "Compute subnet miner"
authors = [
    {name = "waris", email = "waris0609@outlook.com"},
]
dependencies = [
    "alembic>=1.16.5",
    "asgiref>=3.9.1",
    "bittensor==9.10.1",
    "bittensor-cli==9.11.0",
    "bittensor-commit-reveal==0.4.0",
    "celium-collateral==1.1.6",
    "databases>=0.9.0",
    "datura @ file:///${PROJECT_ROOT}/../../datura",
    "fastapi>=0.110.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "psycopg2-binary>=2.9.10",
    "SQLAlchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
    "pytest>=8.4.2",
]
requires-python = "<3.13,>=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
